# ninjaminer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
scripts/: win-install.bat
src/ArgonVariants/: Variants.h
src/Backend/Nvidia/: Nvidia.cpp
src/Config/: Constants.h
src/Miner/: CMakeLists.txt  GetConfig.cpp  main.cpp
src/Types/: Pool.h
